# Justice

./: .coderabbit.yaml  CONCEPTUAL_COMPLETION.md  CONTRIBUTING.md  GETTING_STARTED.md  GITHUB_DISCUSSIONS_GUIDE.md  GOVERNANCE.md  INDEX.md  LANGUAGE_PARITY.md  LICENSE  README.md  ROADMAP.md  create_structure.ps1
00_Framework_Overview/00_Overview_and_Introduction/: README.md
00_Framework_Overview/00_Overview_and_Introduction/Justice_System_Maps_and_Diagrams/: SYSTEM_FLOW.md
00_Overview_and_Introduction/: System_Architecture.md
00_Overview_and_Introduction/Justice_System_Maps_and_Diagrams/: TECHNOLOGY_INTEGRATION_MAP.md
01_Entry_into_the_System/: README.md
01_Entry_into_the_System/Law_Enforcement/Technology_and_Surveillance/: Sentinel_AI_Risk_Detection.md
02_Prosecution_and_Pretrial/: README.md
03_Adjudication_and_Trial/: README.md
04_Sentencing_and_Sanctions/: README.md
05_Corrections_and_Incarceration/: README.md
06_Reentry_and_Community_Supervision/: README.md
07_Victims_Rights_and_Support/: README.md
07_Victims_Rights_and_Support/Crisis_Support_Services/: AI_Legal_Hotline_System.md
08_Oversight_Accountability_and_Reform/Reform_Proposals_and_Innovations/: Technology_Solutions.md
08_Oversight_Accountability_and_Reform_Testing/08_Oversight_Accountability_and_Reform/: README.md
09_Civil_and_Administrative_Justice/: README.md
10_Specialized_and_Alternative_Justice/: README.md
11_Data_Research_and_Statistics/: README.md
12_Comparative_and_International/: README.md
13_Legislation_and_Policy/Federal/: Take_It_Down_Act_2025.md
13_Technology_Solutions_and_Innovation/AI_Legal_Hotline/docs/: NeuralNetworkOptimization.md  VoiceAIIntegration.md
13_Technology_Solutions_and_Innovation/Identity_Protection_Platform/: README.md
13_Technology_Solutions_and_Innovation/Identity_Protection_Platform/dashboard/: package.json
13_Technology_Solutions_and_Innovation/Identity_Protection_Platform/languages/haskell/: justice-identity-protection.cabal
13_Technology_Solutions_and_Innovation/Identity_Protection_Platform/languages/scala/: build.sbt
13_Technology_Solutions_and_Innovation/Identity_Protection_Platform/languages/solidity/: package.json
13_Technology_Solutions_and_Innovation/Identity_Protection_Platform/languages/typescript/: .npmignore  IdentityProtectionBlockchain.md  LICENSE  PUBLISHING.md  README.md
14_Case_Law_and_Precedents_TEMP/: README.md
14_Legislation_Policy_and_Implementation/13_Legislation_and_Policy/: README.md
15_Resources_Tools_and_Communities/15_Resources_and_Tools/Software_and_Databases/: API_DOCUMENTATION_TEMPLATE.md
15_Resources_and_Tools/: README.md
15_Resources_and_Tools/Software_and_Databases/: IMPLEMENTATION_GUIDE_TEMPLATE.md
docs/: CyberCrime.md
(+13 files in other folders)
