cabal-version: 2.2
name: justice-identity-protection
version: 1.0.0
synopsis: Government-mandated digital identity protection with formal verification
description: 
    Haskell implementation of the Justice Identity Protection Platform with 
    formal verification capabilities for legal contracts and cryptographic proofs.
    Provides type-safe blockchain interactions and mathematically verified 
    identity protection algorithms.

homepage: https://github.com/justice-platform/identity-protection
bug-reports: https://github.com/justice-platform/identity-protection/issues
license: MIT
license-file: LICENSE
author: Justice Platform
maintainer: platform@justice.gov
copyright: 2025 Justice Platform
category: Cryptography, Government, Blockchain
build-type: Simple
extra-source-files: README.md, CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import: warnings
    exposed-modules:
        Justice.Identity.Core
        Justice.Identity.Blockchain.Cardano
        Justice.Identity.Blockchain.Ethereum
        Justice.Identity.Biometrics.Verification
        Justice.Identity.Legal.Evidence
        Justice.Identity.Metaverse.Anchoring
        Justice.Identity.Platform.Integration
        Justice.Identity.Crypto.ZKProofs
        Justice.Identity.Government.Authentication
    
    build-depends:
        base ^>=4.16.0.0,
        aeson >= 2.0,
        bytestring >= 0.11,
        cardano-api >= 8.0,
        cryptonite >= 0.30,
        lens >= 5.0,
        mtl >= 2.2,
        text >= 1.2,
        time >= 1.9,
        vector >= 0.13,
        stm >= 2.5,
        async >= 2.2,
        servant >= 0.19,
        servant-server >= 0.19,
        warp >= 3.3,
        refined >= 0.6,
        generic-lens >= 2.0
    
    hs-source-dirs: src
    default-language: Haskell2010

executable justice-government-dashboard
    import: warnings
    main-is: Main.hs
    build-depends:
        base,
        justice-identity-protection,
        optparse-applicative >= 0.17
    hs-source-dirs: app
    default-language: Haskell2010

test-suite justice-tests
    import: warnings
    default-language: Haskell2010
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    main-is: Spec.hs
    build-depends:
        base,
        justice-identity-protection,
        hspec >= 2.9,
        QuickCheck >= 2.14

benchmark justice-benchmarks
    import: warnings
    default-language: Haskell2010
    type: exitcode-stdio-1.0
    hs-source-dirs: bench
    main-is: Main.hs
    build-depends:
        base,
        justice-identity-protection,
        criterion >= 1.5
